<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="168dp">
        <ImageView
            android:layout_width="268dp"
            android:layout_height="268dp"
            android:background="@mipmap/ic_launcher_foreground"
            android:contentDescription="@string/logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_horizontal"
            android:text="@string/slogan"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@mipmap/ic_launcher_foreground"
                android:contentDescription="@string/logo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/lazyQuick"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="#AFAFAF"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/neutrino"
                android:contentDescription="@string/myStudio" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/myStudio"
                android:textSize="14sp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:text="@string/motto"
            android:textSize="13sp"/>
    </LinearLayout>

</RelativeLayout>